Options对话框添加选项卡

--- a/res/lang/en.json
+++ b/res/lang/en.json
@@ -1,8 +1,5 @@
 {
   "menu.file": "File",
-  "menu.edit": "Edit",
-  "menu.tools": "Tools",
-  "menu.language": "Language",
   "menu.file.new": "New",
   "menu.file.open": "Open",
   "menu.file.openRecent": "Open Recent",
@@ -10,6 +7,7 @@
   "menu.file.saveAs": "Save As...",
   "menu.file.close": "Close",
   "menu.file.quit": "Quit",
+  "menu.edit": "Edit",
   "menu.edit.undo": "Undo",
   "menu.edit.redo": "Redo",
   "menu.edit.cut": "Cut",
@@ -17,13 +15,17 @@
   "menu.edit.paste": "Paste",
   "menu.edit.selectAll": "Select All",
   "menu.edit.erase": "Erase",
+  "menu.tools": "Tools",
   "menu.tools.options": "Options",
   "menu.tools.properties": "Properties",
-
+  "menu.language": "Language",
+  
   "optionsDialog.title": "Options",
+  "optionsDialog.tab.display": "Display",
   "optionsDialog.gridAxes": "Grid & Axes",
   "optionsDialog.showGrid": "Show Grid",
   "optionsDialog.showAxes": "Show Axes",
+  "optionsDialog.tab.language": "Language",
   "optionsDialog.language": "Language",
   "optionsDialog.ok": "OK",
   "optionsDialog.cancel": "Cancel",
