--- a/res/lang/zh.json
+++ b/res/lang/zh.json
@@ -1,8 +1,5 @@
 {
   "menu.file": "文件",
-  "menu.edit": "编辑",
-  "menu.tools": "工具",
-  "menu.language": "语言",
   "menu.file.new": "新建",
   "menu.file.open": "打开",
   "menu.file.openRecent": "最近打开",
@@ -10,6 +7,7 @@
   "menu.file.saveAs": "另存为...",
   "menu.file.close": "关闭",
   "menu.file.quit": "退出",
+  "menu.edit": "编辑",
   "menu.edit.undo": "撤销",
   "menu.edit.redo": "重做",
   "menu.edit.cut": "剪切",
@@ -17,13 +15,17 @@
   "menu.edit.paste": "粘贴",
   "menu.edit.selectAll": "全选",
   "menu.edit.erase": "删除",
+  "menu.tools": "工具",
   "menu.tools.options": "选项",
   "menu.tools.properties": "属性",
+  "menu.language": "语言",
 
   "optionsDialog.title": "选项",
+  "optionsDialog.tab.display": "显示",
   "optionsDialog.gridAxes": "栅格和坐标轴",
   "optionsDialog.showGrid": "显示栅格",
   "optionsDialog.showAxes": "显示坐标轴",
+  "optionsDialog.tab.language": "语言",
   "optionsDialog.language": "语言",
   "optionsDialog.ok": "确定",
   "optionsDialog.cancel": "取消",
