--- a/res/lang/en.json
+++ b/res/lang/en.json
@@ -25,6 +25,7 @@
   "optionsDialog.gridAxes": "Grid & Axes",
   "optionsDialog.showGrid": "Show Grid",
   "optionsDialog.showAxes": "Show Axes",
+  "optionsDialog.crossCursorSize": "Cross Cursor Size",
   "optionsDialog.tab.selection": "Selection Set",
   "optionsDialog.pickBoxSize": "PickBox Size",
   "optionsDialog.tab.language": "Language",
