示例与调试窗口

--- a/res/lang/en.json
+++ b/res/lang/en.json
@@ -18,6 +18,8 @@
   "menu.tools": "Tools",
   "menu.tools.options": "Options",
   "menu.tools.properties": "Properties",
+  "menu.tools.demo": "Dear ImGui Demo Window",
+  "menu.tools.metrics": "Dear ImGui Metrics/Debugger",
   "menu.language": "Language",
   
   "optionsDialog.title": "Options",
