按键BackSpace/Enter/Space/Esc相关功能实现

--- a/res/lang/en.json
+++ b/res/lang/en.json
@@ -36,6 +36,7 @@
   "optionsDialog.cancel": "Cancel",
 
   "commandBar.prompt": "Command:",
+  "commandBar.prompt.cancel": "*Cancel*",
   "commandBar.inputPrompt": "Input Command Here",
 
   "propertyBar.title": "Properties"
